# technopark_individual_task_2

./: CMakeLists.txt  README.md  main.c
.github/workflows/: CI.yml
common_functions/: common_functions.c  common_functions.h
consistent_implementation/: consistent.c  consistent.h
parallel_implementation/: parallel.c  parallel.h
test/: input.txt  jump1.txt  jump2.txt  jump3.txt  jump4.txt  jump5.txt  jump6.txt  jump8.txt  test_common_files.cpp  test_consistent.cpp  test_implementation.cpp  test_parallel.cpp
